fix letter-spacing

--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -52,6 +52,9 @@
   @media screen and (min-width: 768px) {
     max-width: 540px;
   }
+  @media screen and (min-width: 1440px) {
+    max-width: 544px;
+  }
 }
 .benefits-subtitle {
   margin-bottom: 16px;
@@ -59,6 +62,9 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 1.1;
+}
+.benefits-text {
+  letter-spacing: 0;
 }
 .benefits-hippo-img {
   border-radius: 16px;
